--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "simpler-react-responsive",
   "main": "src/main.js",
   "version": "1.0.0",
-  "description": "Even simpler usage of react-responsive package",
+  "description": "Even simpler usage of react-responsive package.",
   "author": "Maxim Marchuk",
   "license": "MIT",
   "scripts": {
-    "build": "./node_modules/.bin/webpack --mode=development",
-    "dev": "./node_modules/.bin/webpack serve --mode=development"
+    "build": "./node_modules/.bin/webpack --config webpack.prod.js",
+    "dev": "./node_modules/.bin/webpack serve --config webpack.dev.js"
   },
   "dependencies": {
     "react": "^17.0.2",
@@ -23,7 +23,6 @@
     "@babel/preset-react": "^7.12.10",
     "babel-loader": "^8.2.2",
     "file-loader": "^6.2.0",
-    "html-loader": "^1.3.2",
     "html-webpack-plugin": "^5.0.0-beta.6",
     "webpack": "^5.16.0",
     "webpack-cli": "^4.4.0",
@@ -43,5 +42,8 @@
   "bugs": {
     "url": "https://github.com/aimtbr/simpler-react-responsive/issues"
   },
-  "homepage": "https://github.com/aimtbr/simpler-react-responsive#readme"
+  "homepage": "https://github.com/aimtbr/simpler-react-responsive#readme",
+  "files": [
+    "/dist"
+  ]
 }
