Update the 'README.md' and 'package.json' files

--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   },
   "bugs": {
     "url": "https://github.com/aimtbr/simpler-react-responsive/issues",
-    "email": "aim.tbr.corp@gmail.com"
+    "email": "maxim.marchuk.d.corp@gmail.com"
   },
   "homepage": "https://github.com/aimtbr/simpler-react-responsive#readme"
 }
